<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/houseImageView"
        android:layout_width="61dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_rowSpan="2"
        app:srcCompat="@drawable/smhouse" />

    <TextView
        android:id="@+id/houseTextView"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/Purchase_Price_textView"
        android:textColor="#040d74"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/purchasePriceEditText"
        android:layout_width="272dp"
        android:layout_height="30dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="#BBDEFB"
        android:digits="1234567890"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Amount"
        android:inputType="numberDecimal" />

    <ImageView
        android:id="@+id/moneyImageView"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2"
        android:layout_rowSpan="2"
        app:srcCompat="@drawable/smmoney" />

    <TextView
        android:id="@+id/downpaymentTextView"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/Down_Payment_textView"
        android:textColor="#040d74"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/downpaymentEditText"
        android:layout_width="272dp"
        android:layout_height="30dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:background="#BBDEFB"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Amount"
        android:inputType="numberDecimal" />

    <ImageView
        android:id="@+id/interestrateImageView"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_rowSpan="2"
        app:srcCompat="@drawable/sminterestrate" />

    <TextView
        android:id="@+id/interestrateTextView"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/interest_rate_textView"
        android:textColor="#040d74"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/interestrateEditText"
        android:layout_width="272dp"
        android:layout_height="30dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:background="#BBDEFB"
        android:digits="1234567890."
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Percent"
        android:inputType="numberDecimal"
        android:maxLength="4" />

    <ImageView
        android:id="@+id/calendarImageView"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_rowSpan="5"
        app:srcCompat="@drawable/smcalendar" />

    <TextView
        android:id="@+id/loandurationTextView"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/loan_term_textView"
        android:textColor="#040d74"
        android:textSize="18sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/termSeekBar"
        android:layout_width="271dp"
        android:layout_height="30dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="10"
        android:max="30"
        android:progress="10" />

    <ImageView
        android:id="@+id/cashregisterImageView"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="top|center_horizontal"
        android:layout_row="19"
        android:layout_rowSpan="2"
        app:srcCompat="@drawable/smcashregister" />

    <TextView
        android:id="@+id/monthlypaymentTextView"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="19"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/monthly_payment_textView"
        android:textColor="#040d74"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/monthlyPaymentEditText"
        android:layout_width="272dp"
        android:layout_height="30dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="20"
        android:background="#FFE0B2"
        android:cursorVisible="false"
        android:digits="0123456789"
        android:ems="10"
        android:focusable="auto"
        android:gravity="center"
        android:hint="monthly payment"
        android:inputType="numberDecimal" />

</GridLayout>